--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-    <title> Title </title>
+    <title> AJ Hackett International </title>
 
     {% include head.html %}
     
