--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -485,6 +485,9 @@ a {
   margin-left: auto;
   margin-right: auto;
 }
+.mb-5p {
+  margin-bottom: 5%;
+}
 .ml-4 {
   margin-left: 1rem;
 }
@@ -569,6 +572,14 @@ a {
   padding-left: 5%;
   padding-right: 5%;
 }
+.py-2p {
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+.py-1p {
+  padding-top: 1%;
+  padding-bottom: 1%;
+}
 .pb-10p {
   padding-bottom: 10%;
 }
@@ -584,6 +595,9 @@ a {
 .pl-5 {
   padding-left: 1.25rem;
 }
+.pl-5p {
+  padding-left: 5%;
+}
 .pr-5 {
   padding-right: 1.25rem;
 }
@@ -598,6 +612,12 @@ a {
 }
 .pt-5 {
   padding-top: 1.25rem;
+}
+.pb-1p {
+  padding-bottom: 1%;
+}
+.pt-1p {
+  padding-top: 1%;
 }
 .text-center {
   text-align: center;
