--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -468,6 +468,9 @@ a {
 .z-50 {
   z-index: 50;
 }
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
 .col-span-3 {
   grid-column: span 3 / span 3;
 }
@@ -485,8 +488,15 @@ a {
   margin-left: auto;
   margin-right: auto;
 }
+.my-5p {
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
 .mb-10p {
   margin-bottom: 10%;
+}
+.mb-4 {
+  margin-bottom: 1rem;
 }
 .mb-5p {
   margin-bottom: 5%;
@@ -497,8 +507,8 @@ a {
 .mt-10p {
   margin-top: 10%;
 }
-.mt-5p {
-  margin-top: 5%;
+.mt-4 {
+  margin-top: 1rem;
 }
 .flex {
   display: flex;
@@ -508,6 +518,9 @@ a {
 }
 .hidden {
   display: none;
+}
+.aspect-square {
+  aspect-ratio: 1/1;
 }
 .h-full {
   height: 100%;
@@ -527,17 +540,29 @@ a {
 .max-w-screen-2xl {
   max-width: 1536px;
 }
+.grow {
+  flex-grow: 1;
+}
 .grid-cols-12 {
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+}
 .flex-col {
   flex-direction: column;
 }
 .items-center {
   align-items: center;
+}
+.justify-start {
+  justify-content: flex-start;
 }
 .justify-end {
   justify-content: flex-end;
@@ -548,8 +573,17 @@ a {
 .justify-between {
   justify-content: space-between;
 }
+.gap-1 {
+  gap: 0.25rem;
+}
 .gap-5 {
   gap: 1.25rem;
+}
+.gap-6 {
+  gap: 1.5rem;
+}
+.overflow-x-auto {
+  overflow-x: auto;
 }
 .rounded-3xl {
   border-radius: 1.5rem;
@@ -567,12 +601,24 @@ a {
   -o-object-fit: cover;
      object-fit: cover;
 }
+.object-center {
+  -o-object-position: center;
+     object-position: center;
+}
 .p-5 {
   padding: 1.25rem;
+}
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 .px-2p {
   padding-left: 2%;
   padding-right: 2%;
+}
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 .px-5p {
   padding-left: 5%;
@@ -581,6 +627,16 @@ a {
 .py-1p {
   padding-top: 1%;
   padding-bottom: 1%;
+}
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+.pb-1 {
+  padding-bottom: 0.25rem;
+}
+.pb-1\.5 {
+  padding-bottom: 0.375rem;
 }
 .pb-10p {
   padding-bottom: 10%;
@@ -612,11 +668,17 @@ a {
 .pt-10p {
   padding-top: 10%;
 }
+.pt-2 {
+  padding-top: 0.5rem;
+}
 .pt-2p {
   padding-top: 2%;
 }
 .pt-5 {
   padding-top: 1.25rem;
+}
+.pt-5p {
+  padding-top: 5%;
 }
 .text-center {
   text-align: center;
@@ -642,6 +704,9 @@ a {
 }
 .uppercase {
   text-transform: uppercase;
+}
+.underline {
+  text-decoration-line: underline;
 }
 
 
@@ -734,8 +799,14 @@ header {
   color:#033357;
 }
 
+.grow { 
+  transition: transform .2s ease-in-out; 
+  display: inline-block;
+}
 
-
+.grow:hover { 
+  transform: scale(1.1); 
+}
 
 
 /* Aspect Ratio  */
@@ -750,6 +821,127 @@ header {
 .g-bg-pos-b { background-position: bottom; }
 .g-bg-pos-l { background-position: left; }
 .g-bg-pos-r { background-position: right; }
+
+
+.hamburger-wrapper {
+  cursor: pointer;
+  display: inline-block;
+  right: 5%;
+  top: 5%;
+  z-index: 1000;
+  position: fixed;
+}
+
+.hamburger-menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 24px;
+  height: 20px;
+}
+
+.hamburger-menu span {
+  background-color: #033357;
+  height: 4px;
+  width: 100%;
+  transition: transform 0.3s ease-in-out;
+}
+
+.mobile-menu {
+  display: fixed;
+  background-color: #033357; /* Dark blue background */
+  color: #FFFDFF; /* Light text color */
+  padding: 2rem;
+  position: fixed;
+  top: 0;
+  right: -500px; /* Initially hidden off-screen */
+  width: 440px; /* Width of the menu */
+  height: 100vh;
+  text-align: left;
+  overflow-y: auto;
+  z-index: 50;
+  transition: right 0.3s ease; /* Slide effect */
+  border-left: 4px solid #D2AE39; /* Yellow left border */
+}
+
+.mobile-menu.active {
+  right: 0; /* Slide in */
+}
+
+.mobile-menu-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.mobile-menu a {
+  text-decoration: none; 
+  color: #FFFDFF; /* Light text color */
+  /* padding: 1rem; */
+  display: block;
+  font-weight: normal;
+  font-size: 1.5rem;
+}
+
+.submenu {
+  margin-top: 0.5rem;
+  /* padding-left: 1.5rem;  Indent submenus */
+  border-left: 2px solid #D2AE39; 
+  margin-left: 5%;
+}
+
+.submenu a {
+  font-size: 1.1rem; /* Slightly smaller for subpages */
+}
+
+.logo {
+  width: 80%; /* Logo size in mobile menu */
+  margin-bottom: 2rem;
+}
+
+.close-button {
+  background: none;
+  border: none;
+  color: #FFFDFF; /* Light text color */
+  font-size: 2rem; /* Size of the close icon */
+  position: absolute; /* Position it in the top-right corner */
+  top: 1rem; /* Adjust as needed */
+  right: 1rem; /* Adjust as needed */
+  cursor: pointer;
+}
+
+
+footer {
+  background-color: #033357; /* Dark blue */
+  color: #FFFDFF; /* Light text color */
+}
+
+.footer-logo img {
+  width: 100%; /* Responsive logo */
+  max-width: 200px; /* Set a max width */
+}
+
+.footer-link {
+  color: #FFFDFF; /* Light text color */
+  text-decoration: none;
+  padding: 0.5rem 0; /* Adjusted padding for cleaner look */
+  transition: color 0.3s;
+}
+
+.footer-link:hover {
+  color: #D2AE39; /* Gold hover effect */
+}
+
+.submenu {
+  padding-left: 1.25rem; /* Adjusted indent for better visibility */
+  margin-top: 0.25rem; /* Space above submenu items */
+}
+
+.text-gray-300 {
+  color: #B0BEC5; /* Light gray for footer text */
+  margin-top: 1rem;
+}
+
 @media (min-width: 640px) {
   .sm\:flex {
     display: flex;
@@ -761,7 +953,11 @@ header {
     width: 18rem;
   }
 }
+
 @media (min-width: 768px) {
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
   .md\:flex {
     display: flex;
   }
@@ -769,4 +965,3 @@ header {
     display: none;
   }
 }
-
