--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,6 +1,6 @@
 <footer class="bg-dark-blue py-6">
     <div class="max-w-screen-2xl mx-auto px-4">
-        <div class="grid grid-cols-3 gap-6">
+        <div class="sm:grid sm:grid-cols-3 gap-6">
             <!-- Column for the Logo -->
             <div class="footer-logo mb-4 md:mb-0 flex justify-start">
                 <a href="/index.html" aria-label="Go to homepage">
