--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -462,9 +462,6 @@ a {
 .z-30 {
   z-index: 30;
 }
-.z-40 {
-  z-index: 40;
-}
 .z-50 {
   z-index: 50;
 }
@@ -501,11 +498,11 @@ a {
 .mb-5p {
   margin-bottom: 5%;
 }
-.ml-4 {
-  margin-left: 1rem;
-}
 .mt-10p {
   margin-top: 10%;
+}
+.mt-30p {
+  margin-top: 30%;
 }
 .mt-4 {
   margin-top: 1rem;
@@ -516,9 +513,6 @@ a {
 .grid {
   display: grid;
 }
-.hidden {
-  display: none;
-}
 .aspect-square {
   aspect-ratio: 1/1;
 }
@@ -527,9 +521,6 @@ a {
 }
 .min-h-30 {
   min-height: 30vh;
-}
-.w-44 {
-  width: 11rem;
 }
 .w-48 {
   width: 12rem;
@@ -588,6 +579,9 @@ a {
 .rounded-3xl {
   border-radius: 1.5rem;
 }
+.rounded-xl {
+  border-radius: 0.75rem;
+}
 .border-r {
   border-right-width: 1px;
 }
@@ -612,10 +606,6 @@ a {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
-.px-2p {
-  padding-left: 2%;
-  padding-right: 2%;
-}
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -627,6 +617,10 @@ a {
 .py-1p {
   padding-top: 1%;
   padding-bottom: 1%;
+}
+.py-2p {
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
 .py-6 {
   padding-top: 1.5rem;
@@ -671,9 +665,6 @@ a {
 .pt-2 {
   padding-top: 0.5rem;
 }
-.pt-2p {
-  padding-top: 2%;
-}
 .pt-5 {
   padding-top: 1.25rem;
 }
@@ -697,6 +688,10 @@ a {
 .text-6xl {
   font-size: 3.75rem;
   line-height: 1;
+}
+.text-lg {
+  font-size: 1.125rem;;
+  line-height: 1.2;
 }
 .text-xl {
   font-size: 1.25rem;
@@ -826,8 +821,8 @@ header {
 .hamburger-wrapper {
   cursor: pointer;
   display: inline-block;
-  right: 5%;
-  top: 5%;
+  right: 19%;
+  top: 3.2%;
   z-index: 1000;
   position: fixed;
 }
@@ -865,7 +860,7 @@ header {
 }
 
 .mobile-menu.active {
-  right: 0; /* Slide in */
+  right: -95px; 
 }
 
 .mobile-menu-content {
@@ -895,7 +890,7 @@ header {
 }
 
 .logo {
-  width: 80%; /* Logo size in mobile menu */
+  width: 45%; /* Logo size in mobile menu */
   margin-bottom: 2rem;
 }
 
@@ -909,9 +904,6 @@ header {
   right: 1rem; /* Adjust as needed */
   cursor: pointer;
 }
-
-
-
 
 
 footer {
@@ -946,26 +938,65 @@ footer {
   margin-top: 1rem;
 }
 
+.header-box {
+  margin-right: -5rem; 
+  margin-top: 40%; 
+  margin-left: 1%;
+}
+
+@media (min-width:650px) {
+
+  .header-box {
+    margin-right: -5rem; 
+    margin-top: 40%; 
+    margin-left: 30%;
+  }
+
+  .logo {
+    width: 80%; /* Logo size in mobile menu */
+    margin-bottom: 2rem;
+  }
+
+}
+
 @media (min-width: 640px) {
+  .sm\:mt-10p {
+    margin-top: 10%;
+  }
   .sm\:flex {
     display: flex;
   }
   .sm\:min-h-50 {
     min-height: 50vh;
   }
-  .sm\:w-72 {
-    width: 18rem;
+  .sm\:rounded-3xl {
+    border-radius: 1.5rem;
+  }
+  .sm\:py-1p {
+    padding-top: 1%;
+    padding-bottom: 1%;
+  }
+  .sm\:pb-1p {
+    padding-bottom: 1%;
+  }
+  .sm\:pb-2p {
+    padding-bottom: 2%;
+  }
+  .sm\:pt-2p {
+    padding-top: 2%;
+  }
+  .sm\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+  .sm\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.2;
   }
 }
 
 @media (min-width: 768px) {
   .md\:mb-0 {
     margin-bottom: 0px;
-  }
-  .md\:flex {
-    display: flex;
-  }
-  .md\:hidden {
-    display: none;
   }
 }
