--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -59,9 +59,12 @@
 
 <section class="mt-30p sm:mt-10p"> 
     {% for item in page.header %}
-    <div class="bg-cover bg-no-repeat rounded-3xl relative mx-5p" style="background-image: url('{{ item.image }}'); height: 34rem;">
-        <div class="flex flex-col justify-end h-full p-5">
-            <div class="bg-dark-blue p-5 relative header-box">
+    <div class="relative mx-5p overflow-hidden rounded-3xl" style="height: 34rem;">
+        <div class="bg-cover bg-center bg-no-repeat w-full h-full rounded-3xl" 
+             style="background-image: url('{{ item.image }}'); background-position: center;">
+        </div>
+        <div class="absolute inset-0 flex flex-col justify-end p-5">
+            <div class="bg-dark-blue p-5 header-box">
                 <div style="margin-right: 10%;">
                     <h1 class="header-font text-2xl sm:text-6xl">{{ item.title }}</h1>
                     <p class="text-lg sm:text-xl uppercase">{{ item.text }}</p>
@@ -71,3 +74,5 @@
     </div>
     {% endfor %}
 </section>
+
+
