--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -23,17 +23,17 @@
         </a>
         <button class="close-button" aria-label="Close menu">&times;</button>
         <nav>
-            <a href="#">AJ Hackett</a>
+            <a href="/meet-aj-hackett.html">AJ Hackett</a>
             <div class="submenu">
-                <a href="#" class="pl-5p pb-2p">Meet AJ Hackett</a>
-                <a href="#" class="pl-5p">Timeline</a>
+                <a href="/meet-aj-hackett.html" class="pl-5p pb-2p">Meet AJ Hackett</a>
+                <a href="/timeline.html" class="pl-5p">Timeline</a>
             </div>
             <a href="#" class="pt-5p">Our Brands</a>
             <div class="submenu">
-                <a href="#" class="pl-5p pb-2p">Skypark by AJ Hackett</a>
-                <a href="#" class="pl-5p">Pondok Santi Estate</a>
+                <a href="/skypark-aj-hackett.html" class="pl-5p pb-2p">Skypark by AJ Hackett</a>
+                <a href="/pondok-santi-estate.html" class="pl-5p">Pondok Santi Estate</a>
             </div>
-            <a href="#" class="pt-5p">Our Experiences</a>
+            <a href="/experiences-aj-hackett.html" class="pt-5p">Our Experiences</a>
             <a href="#" class="pt-5p">Projects</a>
             <a href="#" class="pt-5p">Sustainability</a>
             <div class="submenu">
