--- a/style.css
+++ b/style.css
@@ -77,6 +77,15 @@ header {
   color: #FFFDFF; 
 }
 
+.text-dark-blue {
+  color: #033357;
+}
+
+.text-dark-blue:hover {
+  color: #033357;
+  text-decoration: underline;
+}
+
 .button {
   border-width: 2.5px;
   border-color: #033357;
