--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -549,6 +549,9 @@ a {
 .list-disc {
   list-style-type: disc;
 }
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
 .grid-cols-12 {
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
@@ -593,6 +596,9 @@ a {
 }
 .gap-6 {
   gap: 1.5rem;
+}
+.gap-y-5 {
+  row-gap: 1.25rem;
 }
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
