--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -486,6 +486,10 @@ a {
 .row-span-2 {
   grid-row: span 2 / span 2;
 }
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
 .mx-5p {
   margin-left: 5%;
   margin-right: 5%;
@@ -507,6 +511,9 @@ a {
 .mb-5p {
   margin-bottom: 5%;
 }
+.mt-1 {
+  margin-top: 0.25rem;
+}
 .mt-10p {
   margin-top: 10%;
 }
@@ -519,14 +526,26 @@ a {
 .mt-4 {
   margin-top: 1rem;
 }
+.block {
+  display: block;
+}
+.inline-block {
+  display: inline-block;
+}
 .flex {
   display: flex;
+}
+.inline-flex {
+  display: inline-flex;
 }
 .grid {
   display: grid;
 }
 .aspect-square {
   aspect-ratio: 1/1;
+}
+.h-48 {
+  height: 12rem;
 }
 .h-full {
   height: 100%;
@@ -594,6 +613,9 @@ a {
 .gap-5 {
   gap: 1.25rem;
 }
+.gap-5p {
+  gap: 5%;
+}
 .gap-6 {
   gap: 1.5rem;
 }
@@ -605,14 +627,31 @@ a {
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
 .overflow-x-auto {
   overflow-x: auto;
+}
+.whitespace-nowrap {
+  white-space: nowrap;
 }
 .rounded-3xl {
   border-radius: 1.5rem;
 }
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+.rounded-md {
+  border-radius: 0.375rem;
+}
 .rounded-xl {
   border-radius: 0.75rem;
+}
+.border {
+  border-width: 1px;
 }
 .border-r {
   border-right-width: 1px;
@@ -645,6 +684,10 @@ a {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -661,9 +704,17 @@ a {
   padding-top: 1%;
   padding-bottom: 1%;
 }
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
 .py-2p {
   padding-top: 2%;
   padding-bottom: 2%;
+}
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 .py-6 {
   padding-top: 1.5rem;
@@ -724,6 +775,10 @@ a {
   font-size: 1.5rem;
   line-height: 1.2;
 }
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 1;
+}
 .text-4xl {
   font-size: 2.25rem;
   line-height: 1;
@@ -731,6 +786,10 @@ a {
 .text-6xl {
   font-size: 3.75rem;
   line-height: 1;
+}
+.text-base {
+  font-size: 1rem;
+  line-height: 1.2;
 }
 .text-lg {
   font-size: 1.125rem;;
@@ -744,11 +803,24 @@ a {
   font-size: 1.25rem;
   line-height: 1.2;
 }
+.font-medium {
+  font-weight: 500;
+}
 .uppercase {
   text-transform: uppercase;
 }
 .underline {
   text-decoration-line: underline;
+}
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 
@@ -823,6 +895,11 @@ header {
   color: #FFFDFF; 
 }
 
+.bg-grey {
+  background-color: #F3F1EF; 
+  color:#033357; ; 
+}
+
 .text-dark-blue {
   color: #033357;
 }
@@ -857,6 +934,33 @@ header {
 
 .grow:hover { 
   transform: scale(1.1); 
+}
+
+
+
+/* Container with Scrollbar */
+.overflow-x-auto {
+  scrollbar-color: #033357 #FFFDFF; /* Scroll thumb and track color */
+  scrollbar-width: thin; /* Thinner scrollbar for Firefox */
+}
+
+.overflow-x-auto::-webkit-scrollbar {
+  height: 8px; /* Scrollbar height */
+}
+
+.overflow-x-auto::-webkit-scrollbar-track {
+  background-color: #FFFDFF; /* Track color */
+  border-radius: 10px;
+}
+
+.overflow-x-auto::-webkit-scrollbar-thumb {
+  background-color: #033357; /* Thumb color */
+  border-radius: 10px;
+  border: 2px solid #FFFDFF; /* Optional border around the thumb */
+}
+
+.overflow-x-auto::-webkit-scrollbar-thumb:hover {
+  background-color: #4A4A4A; /* Change thumb color on hover */
 }
 
 
@@ -1020,6 +1124,21 @@ footer {
 
 }
 
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.focus\:ring-2:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-offset-2:focus {
+  --tw-ring-offset-width: 2px;
+}
+
 @media (min-width: 640px) {
   .sm\:mt-10p {
     margin-top: 10%;
@@ -1059,6 +1178,10 @@ footer {
     font-size: 3.75rem;
     line-height: 1;
   }
+  .sm\:text-sm {
+    font-size: 0.875rem;;
+    line-height: 1.2;
+  }
   .sm\:text-xl {
     font-size: 1.25rem;
     line-height: 1.2;
@@ -1068,5 +1191,8 @@ footer {
 @media (min-width: 768px) {
   .md\:mb-0 {
     margin-bottom: 0px;
+  }
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
