--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -34,22 +34,22 @@
                 <a href="/pondok-santi-estate.html" class="pl-5p">Pondok Santi Estate</a>
             </div>
             <a href="/experiences-aj-hackett.html" class="pt-5p">Our Experiences</a>
-            <a href="#" class="pt-5p">Projects</a>
-            <a href="#" class="pt-5p">Sustainability</a>
+            <a href="/projects.html" class="pt-5p">Projects</a>
+            <a href="/sustainability.html" class="pt-5p">Sustainability</a>
             <div class="submenu">
-                <a href="#" class="pl-5p pb-2p">Accessibility</a>
-                <a href="#" class="pl-5p pb-2p">Reconciliation</a>
-                <a href="#" class="pl-5p">Community</a>
+                <a href="/accessibility.html" class="pl-5p pb-2p">Accessibility</a>
+                <a href="/reconciliation.html" class="pl-5p pb-2p">Reconciliation</a>
+                <a href="/community.html" class="pl-5p">Community</a>
             </div>
-            <a href="#" class="pt-5p">Get to Know Us</a>
+            <a href="/meet-the-team.html" class="pt-5p">Get to Know Us</a>
             <div class="submenu">
-                <a href="#" class="pl-5p pb-2p">Meet Our Team</a>
-                <a href="#" class="pl-5p pb-2p">Our Purpose</a>
-                <a href="#" class="pl-5p pb-2p">Our Promise</a>
-                <a href="#" class="pl-5p pb-2p">Our Values</a>
+                <a href="/meet-the-team.html" class="pl-5p pb-2p">Meet Our Team</a>
+                <a href="/purpose-promise-values.html" class="pl-5p pb-2p">Our Purpose</a>
+                <a href="/purpose-promise-values.html" class="pl-5p pb-2p">Our Promise</a>
+                <a href="/purpose-promise-values.html" class="pl-5p pb-2p">Our Values</a>
             </div>
-            <a href="#" class="pt-5p">Safety Management</a>
-            <a href="#" class="pt-5p">Contact Us</a>
+            <a href="/safety-management.html" class="pt-5p">Safety Management</a>
+            <a href="/contact.html" class="pt-5p">Contact Us</a>
         </nav>
     </div>
 </div>
