--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,8 @@
     {{content}}
 
 	{% include site-footer.html %}
+
+    {% include scroll-to-top.html %}
     
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://unpkg.com/gsap@3.12.1/dist/gsap.min.js"></script>
